kubernetes/cap-cars-namespaces.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cap-cars-app
  label: dev

---
apiVersion: v1
kind: Namespace
metadata:
  name: cap-cars-db
  label: dev
