kubernetes/cap-cars-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cap-cars-db
  namespace: cap-cars-app
  labels:
    app: cap-cars-db
    tier: database
spec:
  selector:
    matchLabels:
      app: cap-cars-db
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cap-cars-db
        tier: database
    spec:
      containers:
        - image: mysql
          name: cap-cars-db
          ports:
            - containerPort: 3306
              name: cap-cars-db
          volumeMounts:
            - name: cap-cars-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: cap-cars-persistent-storage
          persistentVolumeClaim:
            claimName: cap-cars-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: cap-cars-db
  namespace: cap-cars-app
  labels:
    app: cap-cars-db
    tier: database
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: cap-cars-db
    tier: database
  clusterIP: None
